Arrumando bug para rodar no Google Colab

--- a/Atividade01.ipynb
+++ b/Atividade01.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "[[ ! -e /colabtools ]] && exit # Caso esta célula não esteja executando no Colab, interrompe sua execução aqui\n",
+    "[[ ! -e /opt/google ]] && exit # Caso esta célula não esteja executando no Colab, interrompe sua execução aqui\n",
     "\n",
     "echo \"Running Google Colab commands\"\n",
     "rm -rf ./*\n",
